--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,12 @@ html {
   padding: 5px 10px;
   margin: 5px 0px;
 }
+
+input {
+  width: 65px;
+  height: 28px;
+  border: 1px solid #ccc;
+  border-right: none;
+  text-align: center;
+  font-size: 16px;
+}
