--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Shippori+Antique+B1&display=swap");
+
 * {
   margin: 0px;
   padding: 0px;
@@ -5,7 +7,8 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: "Shippori Antique B1", sans-serif;
+  color: #979797;
 }
 
 .blue-text {
@@ -41,6 +44,10 @@ html {
   grid-template-columns: repeat(7, 1fr) 2fr;
   align-items: center;
   width: 500px;
+}
+
+.label-row {
+  align-items: flex-end;
 }
 
 .input-element,
