--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,8 @@ html {
 
 .pop-up {
   grid-column-start: span 3;
+  position: absolute;
+  transform: translateY(50%);
 }
 
 .edit-form {
@@ -173,4 +175,52 @@ html {
   border-right: 5px solid transparent;
   border-bottom: 5px solid #888888;
   margin-left: 80px;
+}
+
+.settlement-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 25px;
+  margin-right: 75px;
+}
+
+.settlement-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.settlement-section-title {
+  font-size: 24px;
+}
+
+.units-sold-circle {
+  border: 10px solid #00c7fc;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.units-sold {
+  font-size: 28px !important;
+}
+
+.gross {
+  color: #00c7fc;
+  font-size: 24px;
+  margin-top: 10px;
+}
+
+.settlement-section button {
+  padding: 10px 25px;
+  font-size: 24px;
+  border: 1px solid #bbb;
+  border-radius: 2px;
+  color: #8c8c8c;
+  margin-top: 10px;
 }
