--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,7 @@ html {
 
 .settlement-section-title {
   font-size: 24px;
+  font-weight: 600;
 }
 
 .units-sold-circle {
@@ -207,12 +208,13 @@ html {
 }
 
 .units-sold {
-  font-size: 28px !important;
+  font-size: 28px;
 }
 
 .gross {
   color: #00c7fc;
   font-size: 24px;
+  font-weight: 600;
   margin-top: 10px;
 }
 
