--- a/src/App.css
+++ b/src/App.css
@@ -227,14 +227,6 @@ html {
   margin-top: 10px;
 }
 
-/* .poster-note-notification {
-  position: relative;
-  left: 160px;
-  top: -160px;
-  color: #00c7fc;
-  font-size: 24px;
-} */
-
 .poster-note-notification {
   position: absolute;
   transform: translate(140px, 20px);
@@ -247,8 +239,6 @@ html {
 .poster-note {
   position: absolute;
   transform: translate(25px, -155px);
-  /* left: 50px;
-  top: -160px; */
   width: 150px;
 }
 
@@ -266,4 +256,32 @@ html {
   border-right: 5px solid transparent;
   border-bottom: 5px solid #888888;
   transform: translateX(120px);
+}
+
+.percent-circle {
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+}
+
+.percent-circle > p {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #00c7fc;
+  border: 4px solid #979797;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  z-index: -1;
+}
+
+.percent-ring {
+  transform: rotate(-90deg);
+  transform-origin: center;
+  stroke-dasharray: 138 138;
+  stroke-dashoffset: 138;
 }
