--- a/src/App.css
+++ b/src/App.css
@@ -264,6 +264,7 @@ html {
   align-items: center;
   justify-content: center;
   width: 50px;
+  margin: 5px 0px;
 }
 
 .percent-circle > p {
@@ -272,11 +273,8 @@ html {
   justify-content: center;
   align-items: center;
   color: #00c7fc;
-  border: 4px solid #979797;
-  border-radius: 50%;
   width: 40px;
   height: 40px;
-  z-index: -1;
 }
 
 .percent-ring {
